syntax = "proto3";

option go_package = "./pb";

service CouponService{
    rpc AddCoffee(CoffeeItem) returns (CoffeeItem);
    rpc DeleteCoffee(DeleteCoffeeReq) returns (DeleteCoffeeRes);
    rpc UpdateCoffee(CoffeeItem)returns (CoffeeItem);
    rpc SellCoffee(SellCoffeeReq)returns (CoffeeItem);
    rpc ListCoffee(ListCoffeeReq)returns (CoffeeListRes);
    rpc GetCoffee(CoffeeItem) returns (CoffeeItem);

    rpc AddCoupon(AddCouponReq) returns (AddCouponRes);
    rpc ListCoupon(ListCouponReq) returns (CouponListRes);
    rpc CouponDetails(CouponItem) returns (CouponItem);
    rpc AvailableCoupons(AvailableCouponReq) returns (CouponListRes);
    rpc AssignCoupon(CouponItem) returns (CouponItem);
    rpc UseCoupon(UseCouponReq) returns (UseCouponRes);
}

message CoffeeItem{
    int32   id=1;
    string  name=2;
    float   price=3;
    float   realPrice=4;
    int32   soldNum=5;
    string  sku=6;
    string  description=7;
    string  image=8;
}

message SellCoffeeReq{
    int32   soldNum=1;
    int32   id=2;
}

message DeleteCoffeeReq{
    repeated int32 id=1;
}

message DeleteCoffeeRes{
    bool result=1;
}

message ListCoffeeReq{
    int32 pageSize=1;
    int32 pageNo=2;
}

message CoffeeListRes{
    repeated CoffeeItem coffeeList=1;
    int32 total=2;
}

message AddCouponReq{
    int32 amount=1;
    string name=2;
    int32 couponType=3;
    int32 discountType=4;
    float discount=5;
    float discountFrom=6;
    bool added=7;
    float ratio=8;
    bool used=9;
    int32 enableAt=10;
    int32 expiredAt=11;
}

message AddCouponRes{
    int32 total=1;
    repeated CouponItem couponList=2;
}

message CouponItem{
    int32 id=1;
    string code=2;
    string name=3;
    int32 couponType=4;
    int32 discountType=5;
    float discount=6;
    float discountFrom=7;
    bool added=8;
    float ratio=9;
    bool used=10;
    int32 enableAt=11;
    int32 expiredAt=12;
    int32 accountId=13;
}

message ListCouponReq{
    int32 pageSize=1;
    int32 pageNo=2;
    string name=3;
    int32 enableAt=4;
    string enableAtOpt=5;
    int32 expiredAt=6;
    string expiredAtOpt=7;
    int32 used =8;
    int32 added=9;
}

message CouponListRes{
    repeated CouponItem couponList=1;
    int32 total=2;
}

message UseCouponReq{
    int32 couponId=1;
    float amount=2;
    int32 accountId=3;
}

message UseCouponRes{
    bool result=1;
    float amount=2;
}

message AvailableCouponReq{
    float amount=1;
    bool added=2;
    int32 accountId=3;
}